PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/PredefinedFunctionParameterCount.par
PredefinedFunctionParameterCount {

seq main() : Void {
    var Bool test = isnan(0)

}
}