PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/VariableExistsCoCo.par
VariableExistsCoCo {
seq main() : Void {
    test = 2

}
}